ClassLayout/ClassLayoutParser.py
# Generated from ClassLayout.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ClassLayoutParser ( Parser ):

    grammarFileName = "ClassLayout.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'s'", "'f'", "':'", "'>'", 
                     "','", "'='", "'default'", "'get'", "'set'", "'all'" ]

    symbolicNames = [ "<INVALID>", "AccessModifier", "StaticModifier", "FinalModifier", 
                      "Seperator", "ReturnSpecifier", "ParamaterSeperator", 
                      "ValueAssignment", "DefaultKeyword", "GetKeyword", 
                      "SetKeyword", "AllKeyword", "Name", "Value", "Newline", 
                      "Comment", "Whitespace" ]

    RULE_u2cFile = 0
    RULE_classHeading = 1
    RULE_superClass = 2
    RULE_attribute = 3
    RULE_defaultValue = 4
    RULE_constructor = 5
    RULE_constructorParameter = 6
    RULE_method = 7
    RULE_methodReturnType = 8
    RULE_methodParameter = 9
    RULE_getset = 10
    RULE_modifiers = 11
    RULE_staticModifier = 12
    RULE_finalModifier = 13
    RULE_variable = 14
    RULE_variableReference = 15

    ruleNames =  [ "u2cFile", "classHeading", "superClass", "attribute", 
                   "defaultValue", "constructor", "constructorParameter", 
                   "method", "methodReturnType", "methodParameter", "getset", 
                   "modifiers", "staticModifier", "finalModifier", "variable", 
                   "variableReference" ]

    EOF = Token.EOF
    AccessModifier=1
    StaticModifier=2
    FinalModifier=3
    Seperator=4
    ReturnSpecifier=5
    ParamaterSeperator=6
    ValueAssignment=7
    DefaultKeyword=8
    GetKeyword=9
    SetKeyword=10
    AllKeyword=11
    Name=12
    Value=13
    Newline=14
    Comment=15
    Whitespace=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class U2cFileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classHeading(self):
            return self.getTypedRuleContext(ClassLayoutParser.ClassHeadingContext,0)


        def EOF(self):
            return self.getToken(ClassLayoutParser.EOF, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassLayoutParser.AttributeContext)
            else:
                return self.getTypedRuleContext(ClassLayoutParser.AttributeContext,i)


        def constructor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassLayoutParser.ConstructorContext)
            else:
                return self.getTypedRuleContext(ClassLayoutParser.ConstructorContext,i)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassLayoutParser.MethodContext)
            else:
                return self.getTypedRuleContext(ClassLayoutParser.MethodContext,i)


        def getset(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassLayoutParser.GetsetContext)
            else:
                return self.getTypedRuleContext(ClassLayoutParser.GetsetContext,i)


        def getRuleIndex(self):
            return ClassLayoutParser.RULE_u2cFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterU2cFile" ):
                listener.enterU2cFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitU2cFile" ):
                listener.exitU2cFile(self)




    def u2cFile(self):

        localctx = ClassLayoutParser.U2cFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_u2cFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.classHeading()
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ClassLayoutParser.AccessModifier) | (1 << ClassLayoutParser.StaticModifier) | (1 << ClassLayoutParser.FinalModifier) | (1 << ClassLayoutParser.DefaultKeyword) | (1 << ClassLayoutParser.GetKeyword) | (1 << ClassLayoutParser.SetKeyword) | (1 << ClassLayoutParser.Name) | (1 << ClassLayoutParser.Newline))) != 0):
                self.state = 37
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 33
                    self.attribute()
                    pass

                elif la_ == 2:
                    self.state = 34
                    self.constructor()
                    pass

                elif la_ == 3:
                    self.state = 35
                    self.method()
                    pass

                elif la_ == 4:
                    self.state = 36
                    self.getset()
                    pass


                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(ClassLayoutParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassHeadingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifiers(self):
            return self.getTypedRuleContext(ClassLayoutParser.ModifiersContext,0)


        def Name(self):
            return self.getToken(ClassLayoutParser.Name, 0)

        def Newline(self):
            return self.getToken(ClassLayoutParser.Newline, 0)

        def superClass(self):
            return self.getTypedRuleContext(ClassLayoutParser.SuperClassContext,0)


        def getRuleIndex(self):
            return ClassLayoutParser.RULE_classHeading

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassHeading" ):
                listener.enterClassHeading(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassHeading" ):
                listener.exitClassHeading(self)




    def classHeading(self):

        localctx = ClassLayoutParser.ClassHeadingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classHeading)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.modifiers()
            self.state = 45
            self.match(ClassLayoutParser.Name)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ClassLayoutParser.Seperator:
                self.state = 46
                self.superClass()


            self.state = 49
            self.match(ClassLayoutParser.Newline)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SuperClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Seperator(self):
            return self.getToken(ClassLayoutParser.Seperator, 0)

        def Name(self):
            return self.getToken(ClassLayoutParser.Name, 0)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_superClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuperClass" ):
                listener.enterSuperClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuperClass" ):
                listener.exitSuperClass(self)




    def superClass(self):

        localctx = ClassLayoutParser.SuperClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_superClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(ClassLayoutParser.Seperator)
            self.state = 52
            self.match(ClassLayoutParser.Name)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifiers(self):
            return self.getTypedRuleContext(ClassLayoutParser.ModifiersContext,0)


        def variable(self):
            return self.getTypedRuleContext(ClassLayoutParser.VariableContext,0)


        def Name(self):
            return self.getToken(ClassLayoutParser.Name, 0)

        def Newline(self):
            return self.getToken(ClassLayoutParser.Newline, 0)

        def defaultValue(self):
            return self.getTypedRuleContext(ClassLayoutParser.DefaultValueContext,0)


        def getRuleIndex(self):
            return ClassLayoutParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = ClassLayoutParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.modifiers()
            self.state = 55
            self.variable()
            self.state = 56
            self.match(ClassLayoutParser.Name)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ClassLayoutParser.ValueAssignment:
                self.state = 57
                self.defaultValue()


            self.state = 60
            self.match(ClassLayoutParser.Newline)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefaultValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ValueAssignment(self):
            return self.getToken(ClassLayoutParser.ValueAssignment, 0)

        def Value(self):
            return self.getToken(ClassLayoutParser.Value, 0)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_defaultValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefaultValue" ):
                listener.enterDefaultValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefaultValue" ):
                listener.exitDefaultValue(self)




    def defaultValue(self):

        localctx = ClassLayoutParser.DefaultValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_defaultValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(ClassLayoutParser.ValueAssignment)
            self.state = 63
            self.match(ClassLayoutParser.Value)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifiers(self):
            return self.getTypedRuleContext(ClassLayoutParser.ModifiersContext,0)


        def Newline(self):
            return self.getToken(ClassLayoutParser.Newline, 0)

        def DefaultKeyword(self):
            return self.getToken(ClassLayoutParser.DefaultKeyword, 0)

        def constructorParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassLayoutParser.ConstructorParameterContext)
            else:
                return self.getTypedRuleContext(ClassLayoutParser.ConstructorParameterContext,i)


        def ParamaterSeperator(self, i:int=None):
            if i is None:
                return self.getTokens(ClassLayoutParser.ParamaterSeperator)
            else:
                return self.getToken(ClassLayoutParser.ParamaterSeperator, i)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_constructor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructor" ):
                listener.enterConstructor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructor" ):
                listener.exitConstructor(self)




    def constructor(self):

        localctx = ClassLayoutParser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.modifiers()
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ClassLayoutParser.DefaultKeyword]:
                self.state = 66
                self.match(ClassLayoutParser.DefaultKeyword)
                pass
            elif token in [ClassLayoutParser.Name, ClassLayoutParser.Newline]:
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ClassLayoutParser.Name:
                    self.state = 67
                    self.constructorParameter()
                    self.state = 72
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==ClassLayoutParser.ParamaterSeperator:
                        self.state = 68
                        self.match(ClassLayoutParser.ParamaterSeperator)
                        self.state = 69
                        self.constructorParameter()
                        self.state = 74
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                pass
            else:
                raise NoViableAltException(self)

            self.state = 79
            self.match(ClassLayoutParser.Newline)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstructorParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Name(self):
            return self.getToken(ClassLayoutParser.Name, 0)

        def variableReference(self):
            return self.getTypedRuleContext(ClassLayoutParser.VariableReferenceContext,0)


        def variable(self):
            return self.getTypedRuleContext(ClassLayoutParser.VariableContext,0)


        def getRuleIndex(self):
            return ClassLayoutParser.RULE_constructorParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructorParameter" ):
                listener.enterConstructorParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructorParameter" ):
                listener.exitConstructorParameter(self)




    def constructorParameter(self):

        localctx = ClassLayoutParser.ConstructorParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constructorParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 81
                self.variableReference()


            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 84
                self.variable()


            self.state = 87
            self.match(ClassLayoutParser.Name)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifiers(self):
            return self.getTypedRuleContext(ClassLayoutParser.ModifiersContext,0)


        def Name(self):
            return self.getToken(ClassLayoutParser.Name, 0)

        def Newline(self):
            return self.getToken(ClassLayoutParser.Newline, 0)

        def methodParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClassLayoutParser.MethodParameterContext)
            else:
                return self.getTypedRuleContext(ClassLayoutParser.MethodParameterContext,i)


        def methodReturnType(self):
            return self.getTypedRuleContext(ClassLayoutParser.MethodReturnTypeContext,0)


        def getRuleIndex(self):
            return ClassLayoutParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)




    def method(self):

        localctx = ClassLayoutParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.modifiers()
            self.state = 90
            self.match(ClassLayoutParser.Name)
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 91
                    self.methodParameter() 
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ClassLayoutParser.ParamaterSeperator:
                self.state = 97
                self.methodReturnType()


            self.state = 100
            self.match(ClassLayoutParser.Newline)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodReturnTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ParamaterSeperator(self):
            return self.getToken(ClassLayoutParser.ParamaterSeperator, 0)

        def ReturnSpecifier(self):
            return self.getToken(ClassLayoutParser.ReturnSpecifier, 0)

        def Name(self):
            return self.getToken(ClassLayoutParser.Name, 0)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_methodReturnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodReturnType" ):
                listener.enterMethodReturnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodReturnType" ):
                listener.exitMethodReturnType(self)




    def methodReturnType(self):

        localctx = ClassLayoutParser.MethodReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodReturnType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ClassLayoutParser.ParamaterSeperator)
            self.state = 103
            self.match(ClassLayoutParser.ReturnSpecifier)
            self.state = 104
            self.match(ClassLayoutParser.Name)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ParamaterSeperator(self):
            return self.getToken(ClassLayoutParser.ParamaterSeperator, 0)

        def Name(self, i:int=None):
            if i is None:
                return self.getTokens(ClassLayoutParser.Name)
            else:
                return self.getToken(ClassLayoutParser.Name, i)

        def Seperator(self):
            return self.getToken(ClassLayoutParser.Seperator, 0)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_methodParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodParameter" ):
                listener.enterMethodParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodParameter" ):
                listener.exitMethodParameter(self)




    def methodParameter(self):

        localctx = ClassLayoutParser.MethodParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_methodParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ClassLayoutParser.ParamaterSeperator)
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 107
                self.match(ClassLayoutParser.Name)
                self.state = 108
                self.match(ClassLayoutParser.Seperator)


            self.state = 111
            self.match(ClassLayoutParser.Name)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GetsetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Seperator(self):
            return self.getToken(ClassLayoutParser.Seperator, 0)

        def Newline(self):
            return self.getToken(ClassLayoutParser.Newline, 0)

        def GetKeyword(self):
            return self.getToken(ClassLayoutParser.GetKeyword, 0)

        def SetKeyword(self):
            return self.getToken(ClassLayoutParser.SetKeyword, 0)

        def AllKeyword(self):
            return self.getToken(ClassLayoutParser.AllKeyword, 0)

        def Name(self):
            return self.getToken(ClassLayoutParser.Name, 0)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_getset

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGetset" ):
                listener.enterGetset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGetset" ):
                listener.exitGetset(self)




    def getset(self):

        localctx = ClassLayoutParser.GetsetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_getset)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not(_la==ClassLayoutParser.GetKeyword or _la==ClassLayoutParser.SetKeyword):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 114
            self.match(ClassLayoutParser.Seperator)
            self.state = 115
            _la = self._input.LA(1)
            if not(_la==ClassLayoutParser.AllKeyword or _la==ClassLayoutParser.Name):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 116
            self.match(ClassLayoutParser.Newline)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModifiersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AccessModifier(self):
            return self.getToken(ClassLayoutParser.AccessModifier, 0)

        def staticModifier(self):
            return self.getTypedRuleContext(ClassLayoutParser.StaticModifierContext,0)


        def finalModifier(self):
            return self.getTypedRuleContext(ClassLayoutParser.FinalModifierContext,0)


        def getRuleIndex(self):
            return ClassLayoutParser.RULE_modifiers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModifiers" ):
                listener.enterModifiers(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModifiers" ):
                listener.exitModifiers(self)




    def modifiers(self):

        localctx = ClassLayoutParser.ModifiersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_modifiers)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ClassLayoutParser.AccessModifier:
                self.state = 118
                self.match(ClassLayoutParser.AccessModifier)


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ClassLayoutParser.StaticModifier:
                self.state = 121
                self.staticModifier()


            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ClassLayoutParser.FinalModifier:
                self.state = 124
                self.finalModifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StaticModifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StaticModifier(self):
            return self.getToken(ClassLayoutParser.StaticModifier, 0)

        def Seperator(self):
            return self.getToken(ClassLayoutParser.Seperator, 0)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_staticModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStaticModifier" ):
                listener.enterStaticModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStaticModifier" ):
                listener.exitStaticModifier(self)




    def staticModifier(self):

        localctx = ClassLayoutParser.StaticModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_staticModifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(ClassLayoutParser.StaticModifier)
            self.state = 128
            self.match(ClassLayoutParser.Seperator)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FinalModifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FinalModifier(self):
            return self.getToken(ClassLayoutParser.FinalModifier, 0)

        def Seperator(self):
            return self.getToken(ClassLayoutParser.Seperator, 0)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_finalModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFinalModifier" ):
                listener.enterFinalModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFinalModifier" ):
                listener.exitFinalModifier(self)




    def finalModifier(self):

        localctx = ClassLayoutParser.FinalModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_finalModifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(ClassLayoutParser.FinalModifier)
            self.state = 131
            self.match(ClassLayoutParser.Seperator)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Name(self):
            return self.getToken(ClassLayoutParser.Name, 0)

        def Seperator(self):
            return self.getToken(ClassLayoutParser.Seperator, 0)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = ClassLayoutParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(ClassLayoutParser.Name)
            self.state = 134
            self.match(ClassLayoutParser.Seperator)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableReferenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Name(self):
            return self.getToken(ClassLayoutParser.Name, 0)

        def Seperator(self, i:int=None):
            if i is None:
                return self.getTokens(ClassLayoutParser.Seperator)
            else:
                return self.getToken(ClassLayoutParser.Seperator, i)

        def getRuleIndex(self):
            return ClassLayoutParser.RULE_variableReference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableReference" ):
                listener.enterVariableReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableReference" ):
                listener.exitVariableReference(self)




    def variableReference(self):

        localctx = ClassLayoutParser.VariableReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_variableReference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(ClassLayoutParser.Name)
            self.state = 137
            self.match(ClassLayoutParser.Seperator)
            self.state = 138
            self.match(ClassLayoutParser.Seperator)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





